# dow-sentiment-analyzer

./: .dockerignore  .editorconfig  .env  .env.example  .gitattributes  .gitignore  .~lock.Loughran-McDonald_MasterDictionary_1993-2024.csv#  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  input.json  project-structure.txt  rustfmt.toml  sentiment_lexicon.json  source_weights.json
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml
.shuttle/: config.toml
config/: ai.json  authority_whitelist.json  earnings.json  geopolitics.json  inflation.json  ingest_whitelist.toml  rates.json  relevance.toml  weights.json
src/: ai_bootstrap.rs  antiflutter.rs  api.rs  change_detector.rs  debug.rs  decision.rs  disruption.rs  engine.rs  history.rs  lib.rs  main.rs  metrics.rs  relevance.rs  rolling.rs  sentiment.rs  source_weights.rs
src/analyze/: ai_adapter.rs  antispam.rs  debug.rs  mod.rs  ner.rs  rerank.rs  rules.rs  scoring.rs  weights.rs
src/config/: ai.rs  mod.rs
src/ingest/: backup.rs  config.rs  mod.rs  scheduler.rs  types.rs
src/ingest/providers/: fed_rss.rs  mod.rs  reuters_rss.rs
src/notify/: antiflutter.rs  discord.rs  email.rs  mod.rs  slack.rs
state/: last_decision.json
tests/: ai_adapter_stub.rs  ai_gate.rs  ai_gate_boundary.rs  ai_integration.rs  api_ai_negative.rs  api_cache.rs  api_http.rs  backup_cron.rs  e2e_smoke.rs  f3_synthetic.rs  ingest_config.rs  ingest_dedup.rs  ingest_e2e.rs  ingest_e2e_decision.rs  ingest_normalize.rs  ingest_pipeline.rs  ingest_scheduler.rs  ingest_whitelist.rs  metrics.rs  metrics_ingest.rs  providers_fed.rs  providers_fed_rss.rs  providers_reuters.rs  relevance_handpicked.rs  relevance_synthetic.rs  thresholds.rs
tests/fixtures/: fed_rss.xml  reuters_rss.xml
ui/: .env.example  package-lock.json  package.json  vite.config.ts
ui/src/: app.css  app.tsx
ui/src/components/: AlertsInfoBox.tsx  EvidencePanel.tsx  TrendPanel.tsx  VerdictPanel.tsx  WhyPanel.tsx
ui/src/pages/: Home.tsx
