[package]
name = "dow-sentiment-analyzer"
version = "0.1.0"
edition = "2021"
description = "A sentiment analysis and decision engine for Dow Jones futures, built with Rust, Axum, and Tokio."
license = "MIT"
authors = ["Lumir Lichy <lumlich@lumlich.com>"]
repository = "https://github.com/lumlich/dow-sentiment-analyzer"
readme = "README.md"

[lib]
name = "dow_sentiment_analyzer"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
sha2 = "0.10"
dotenvy = "0.15"
strsim = "0.11"
async-trait = "0.1"
dashmap = "5.5"

# Web framework
axum = { version = "0.8.4", features = ["macros"] }

# HTTP extensions
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
once_cell = "1.19"
regex = "1.11.2"
anyhow = "1.0.99"
toml = "0.9.5"

# Date/time
chrono = { version = "0.4", features = ["clock", "serde"] }
time = { version = "0.3", features = ["parsing", "formatting"] }

# Text/HTML normalization
html-escape = "0.2"

# RSS/XML parsing
quick-xml = { version = "0.36", features = ["serialize"] }

# Shuttle
shuttle-runtime = "0.56.0"
shuttle-axum = "0.56.0"

# External API
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }

# --- Metrics / Prometheus (UNIFIED on metrics 0.24) ---
metrics = "0.24"
metrics-util = "0.18"
metrics-exporter-prometheus = "0.17.2"

[features]
default = []
debug = []
strict-metrics = []

[dev-dependencies]
rand = "0.9"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
http = "1"
parking_lot = "0.12"
serial_test = "2.0"
